--- a/PrzepisWebAplication/Views/Home/Index.cshtml
+++ b/PrzepisWebAplication/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Witaj w PrzepisyWebApplication!</h1>
+<p>
+    Twoja ostatnia wizyta: @ViewData["LastVisit"]
+</p>
